# StakMesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-binaries.yml
configs/: two_laptop_cluster.txt
examples/: .gitkeep  mnist_distributed.cpp
include/stakmesh/comm/: broadcast.hpp  cluster_config.hpp  local_addresses.hpp  ring_allreduce.hpp  socket.hpp  topology.hpp
scripts/: cluster_nodes.conf.example  launch_cluster.sh
tests/: test_broadcast.cpp  test_checkpoint.cpp  test_cluster_config.cpp  test_distributed_integration.cpp  test_distributed_sequential.cpp  test_distributed_training_loop.cpp  test_ring_allreduce.cpp  test_socket_timeout.cpp
